--- a/other MLs/ML-Project-marouane/prediction_salaire_IT_MAROC_2025.ipynb
+++ b/other MLs/ML-Project-marouane/prediction_salaire_IT_MAROC_2025.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "01b53fea",
+   "metadata": {},
+   "source": [
+    "## Abdelali SAADALI II-BDCC\n",
+    "## Asaad FETHALLAH II-CCN\n",
+    "## Marouane MOUNIR II-BDCC\n",
+    "## Muhammed Irfan WAHYUDI II-BDCC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "250f2736",
    "metadata": {},
    "source": [
