--- a/scripts/analysis.ipynb
+++ b/scripts/analysis.ipynb
@@ -4,6 +4,16 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "## Abdelali SAADALI II-BDCC\n",
+                "## Asaad FETHALLAH II-CCN\n",
+                "## Marouane MOUNIR II-BDCC\n",
+                "## Muhammed Irfan WAHYUDI II-BDCC"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
                 "# Company Classification Project\n",
                 "\n",
                 "Goal: Classify companies into 4 categories:\n",
